style loaders was added

--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-
-    <script src="build/init.js" defer></script>
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <link rel="stylesheet" type="text/css" href="build/init.css" />
+  <script src="build/init.js" defer></script>
 </head>
 <body class="js-body">
-    <div id="js-base-container"></div>
+<div id="js-base-container"></div>
 </body>
 </html>
