--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" type="text/css" href="build/init.css" />
   <script src="build/init.js" defer></script>
 </head>
-<body class="js-body">
-<div id="js-base-container"></div>
+<body class="js-body" id="js-base-container">
 </body>
 </html>
