[task 2] tickets filter was added (without design).

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" type="text/css" href="build/init.css" />
   <script src="build/init.js" defer></script>
 </head>
-<body class="js-body" id="js-base-container">
+<body class="js-body">
+<div id="js-base-container">
+
+</div>
 </body>
 </html>
